--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,20 @@ body {
   box-sizing: border-box;
   /* background-color: rgba(0, 0, 255, 0.397); */
 }
+.contener-spin{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  /* z-index: -1; */
+  animation: z-index 3s linear forwards;
+}
+
+
+
 #loader-spin{
   /* création des dimenssion SPIN  */
+  
   border: 10px solid grey;
   border-radius: 50%;
   border-top: 10px solid #9356DC;
@@ -18,14 +30,14 @@ body {
   border-left: 6px solid #99E2D0;
   width: 10rem;
   height: 5rem;
-  -webkit-animation: rotation 3s linear;
-  -o-animation: rotation 3s linear;
-  animation: rotation 3s linear;
+  /* -webkit-animation: rotation 3s linear; */
+  /* -o-animation: rotation 3s linear; */
+  animation: rotation 3s linear backwards;
   transition-duration: 5s;
   transition-property: background-color;
-  visibility: visible;
   /* Placement du spin au milieu de l'écran */
-  
+  visibility: hidden;
+
   margin: auto;
   position: absolute;
   /* left: 50%; top: 50%; right: 50%; bottom: 50%; */
@@ -36,10 +48,31 @@ body {
   0%{
     transform: rotate(0deg);
     opacity: 0;
+    visibility: visible;
+
+
   }
 100%{
     transform: rotate(360deg);
     opacity: 1;
+
+  }
+}
+
+@keyframes z-index {
+  0%{
+    z-index: 30;
+  }
+  100%{
+    z-index: -1;
+  }
+}
+@keyframes opacity {
+  0%{
+      opacity: 1;
+  }
+  100%{
+    opacity: 0;
   }
 }
 main {
@@ -211,7 +244,9 @@ ul {
   color: white;
   font-size: 15px;
 }
-
+.fonction-choix:hover i{
+  color: #9356DC;
+}
 #puces3 i{
   position: absolute;
   /* top: 78%; */
@@ -260,7 +295,7 @@ ul {
   margin-right: 20px;
 }
 .fa-store{
-  color: #9356DC;
+ 
 }
 /********************* Restaurants Accueil ***************************/
 
@@ -361,8 +396,8 @@ ul {
   /* background-image: linear-gradient(#FF79DA, #9356DC); */
 }
 .items .fa-regular {
-  margin-left: 70%; 
-  margin-top: 1rem;
+  /* margin-left: 70%; 
+  margin-top: 1rem; */
   
   /* line-height: 2.2;*/
   /* flex-wrap: nowrap; */
@@ -375,16 +410,30 @@ ul {
   /* background-color: skyblue; */
   /* border: 1px solid black; */
 }
-.items .fa-solid, .fa-regular{
-  color: transparent;
-  background-image: linear-gradient(red, blue);
-  background-clip: text;
-  -webkit-background-clip: text;
+
+.coeur-vide:hover .coeur-plein{
+  /* visibility: visible; */
+  /* animation: opacity 0.5s forwards; */
+  opacity: 1;
 }
-.items i:hover{
-  transform: translate(20);
+
+.coeur-vide{
+  position: relative;
+  color: blue;
+
+}
+.coeur-plein{
+  color: violet;
+  transform-origin: bottom;
+  /* background-size: cover; */
   opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; 
 }
+
 /* **************************************************************** */
 /* ********************* Media Query Tablette ********************* */
 /* **************************************************************** */
