--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,10 @@ body {
   width: 100%;
   height: 100%;
   background-color: #fff;
-  /* z-index: -1; */
   animation: z-index 3s linear forwards;
 }
-
-
-
 #loader-spin{
   /* création des dimenssion SPIN  */
-  
   border: 10px solid grey;
   border-radius: 50%;
   border-top: 10px solid #9356DC;
@@ -30,17 +25,13 @@ body {
   border-left: 6px solid #99E2D0;
   width: 10rem;
   height: 5rem;
-  /* -webkit-animation: rotation 3s linear; */
-  /* -o-animation: rotation 3s linear; */
   animation: rotation 3s linear backwards;
   transition-duration: 5s;
   transition-property: background-color;
   /* Placement du spin au milieu de l'écran */
   visibility: hidden;
-
   margin: auto;
   position: absolute;
-  /* left: 50%; top: 50%; right: 50%; bottom: 50%; */
   top: 0; left: 0; right: 0; bottom: 0;
 }
 
@@ -307,7 +298,6 @@ ul {
   flex-wrap: wrap;
   width: 100%;
   background-color: #f7f7f7;
-  /* background-color: #f0f0f0; */
 } 
 
 #contener-bis{
@@ -364,7 +354,6 @@ ul {
   background-color: #99E2D0;
 }
 .figure-card, .card2 img{
-  /* object-position: center; */
   object-position: 62% 62%;
 }
 .figcap-flex{
@@ -374,9 +363,6 @@ ul {
   padding-left: 0.5rem;
   border-radius: 0 0 1rem 1rem;
   height: 13vh; /* A modifier lors du Break point media Query*/
-  /* align-content: space-between; */
-  /* background-color: #fff; */
-  /* margin: auto; */
 }  
 .figcap-flex h3 {
   margin-left: 0.5rem;
@@ -387,49 +373,43 @@ ul {
 .figcap-flex i {
   margin-left: 70%; 
   margin-top: 1rem;
-  /* line-height: 2.2;*/ 
   flex-wrap: nowrap; 
   font-size: 2rem;
-  /* font-size: 1.7rem; */
-  /* color: green; */
-  /* color: rgba(128, 128, 128, 0.878); */
-  /* background-image: linear-gradient(#FF79DA, #9356DC); */
 }
-.items .fa-regular {
+/* .items .fa-regular { */
   /* margin-left: 70%; 
   margin-top: 1rem; */
   
   /* line-height: 2.2;*/
   /* flex-wrap: nowrap; */
-  /* font-size: 3rem; */
-} 
+  /* font-size: 3rem; 
+} */
 .items{
   width: 50%;
   height: 2.5rem;
-  /* align-content: space-between; */
-  /* background-color: skyblue; */
-  /* border: 1px solid black; */
 }
-
 .coeur-vide:hover .coeur-plein{
-  /* visibility: visible; */
-  /* animation: opacity 0.5s forwards; */
   opacity: 1;
 }
-
+.coeur-vide:hover{
+  color: white;
+}
 .coeur-vide{
   position: relative;
-  color: blue;
+  color: #020202
 
 }
 .coeur-plein{
-  color: violet;
+  color: transparent;
+  background: linear-gradient(#9356DC, #FF79DA);
   transform-origin: bottom;
-  /* background-size: cover; */
+  background-size: cover;
+  background-position: center;
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition-duration: 1s;
   opacity: 0;
   position: absolute;
-  top: 0;
-  left: 0;
   right: 0;
   bottom: 0; 
 }
