--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,14 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Advent+Pro&family=Dancing+Script&family=Raleway:wght@400;700&family=Roboto:wght@100;200;300;400;500&family=Shippori+Antique+B1&family=Shrikhand&display=swap");
 
 
-
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
 main {
-    height: 100%;
+    width: 100%;
     font-family: "Roboto", sans-serif;
   }
 section {
@@ -77,9 +76,6 @@ ul {
     animation-duration: 2s;
     cursor: pointer;
 }
-.menu-texte {
-    margin-top: 2%;
-} 
 
 @keyframes menu{
     0% {
@@ -155,7 +151,6 @@ ul {
     width: 2.5rem;
     background-color: #99E2D0;
 }
-
 .plats {
     position: relative;
     display: flex;
@@ -234,7 +229,6 @@ ul {
     margin-bottom: 2%;
     width: 20%;
 }
-
 .button-command {
     background-image:  linear-gradient(to bottom, #FF79DAB3, #9356DCB3);
     box-shadow: 1px 1px 14px -3px #000000b2;
@@ -297,22 +291,22 @@ ul {
     }
 }
 
+/********************* Pied de Page **********************/
 footer {
     background-color: #020202;
     color: #fff;
     position: relative;
     top: 40vh;
     width: 100%;
-    padding-top: 1.5rem;
-    height: 14rem;
+    height: 12rem;
 }
 .logo-footer{
-    font-family: "Shrikhand", cursive;
+    font-family: "Shrikhand", "cursive";
     padding-top: 5%;
 }
 .logo-footer,
 ul {
-    margin-left: 8%;
+    margin-left: 5%;
     padding-left: 0;
     line-height: 1.5;
 }
@@ -326,6 +320,7 @@ ul {
 .active:hover{
     color: #99E2D0;
 }
+
 /* **************************************************************** */
 /* ********************* Media Query Tablette ********************* */
 /* **************************************************************** */
@@ -376,24 +371,23 @@ ul {
 .menu-texte{
     margin-top: 0.5%;
 }
-.check { 
-    padding-right: 4rem;
+.check{
+    padding-right: 2rem;
+    width: 8%;
+    right: -13%;
 }
 
-/********* Média Query tablette pied de page *****************/
-/* .logo-footer{
-    font-size: 30px;
-    margin-left: 4rem;
+/************* Média query pied de page  ********************/
+.logo-footer{
+    font-family: "Shrikhand", "cursive";
+    padding-top: 2%;
 }
-footer ul, li{
-    display: flex;
-    justify-content: space-evenly;
-    height: 4rem;
-    margin-right: 1.5rem;
-    margin-top: 0.01rem;
-  } */
-      }  /* crochet fermeture media query */
-
+.logo-footer,
+ul {
+    margin-left: 2.5%;
+}
+    }  /* crochet fermeture media query */
+      
 /* **************************************************************** */
 /* ********************* Media Query Desktop ********************* */
 /* **************************************************************** */
@@ -436,9 +430,6 @@ footer ul, li{
 .gout{
     margin-bottom: 2rem;
 }
-.button-command {
-    margin-right: 200%;
-  }
 .gout h2 {
     font-size: 2.5rem;
 }
@@ -469,27 +460,15 @@ footer ul, li{
     width: 11%;
     right: -18%;
 }
-.menu-texte P{
-    margin-bottom: 4%;
-}
 
 /********* Média Query Desktop pied de page *****************/
-/* footer{
-    /* height: 13rem; */
-    /* padding-bottom: 1rem; 
-  } */
-.logo-footer{ 
-    padding-top: 0;
-    /* width: 25%; */
-    /* font-size: 40px; */
-    /* margin-left: 17%; */
+.logo-footer{
+    font-family: "Shrikhand", "cursive";
+    padding-top: 2%;
 }
-/* footer ul, li{ 
-    display: flex;
-    justify-content: space-around;
-    height: 4rem;
-    margin-right: 1.5rem;
-    margin-top: 0.01rem;
-}*/
-} /* crochet fermeture media query */
+.logo-footer,
+ul {
+    margin-left: 2.5%;
+}
+    } /* crochet fermeture media query */
 
